[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr0loader"
version = "2.0.0"
description = "A toolchain for fetching, processing, and training ML models on pr0gramm data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "pr0loader team" }
]
keywords = ["pr0gramm", "machine-learning", "image-tagging", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.15.0",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = ["pr0loader[ml,dev]"]

[project.scripts]
pr0loader = "pr0loader.cli:app"

[project.urls]
Homepage = "https://github.com/example/pr0loader"
Documentation = "https://github.com/example/pr0loader#readme"
Repository = "https://github.com/example/pr0loader"

[tool.hatch.build.targets.wheel]
packages = ["src/pr0loader"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

